Add multi port to RBL on 5060,5061,5066 and 5067

--- a/issabel/iptables-multiport-issabelrbl.conf
+++ b/issabel/iptables-multiport-issabelrbl.conf
@@ -13,7 +13,7 @@ actionstart_on_demand = false
 actionstart = <iptables> -N f2b-<name>
               <iptables> -A f2b-<name> -j <returntype>
               <iptables> -I <chain> -p <protocol> -m multiport --dports <port> -j f2b-<name>
-              <iptables> -C <chain> -t filter -p udp --dport 5060 -m state --state NEW -j NFQUEUE --queue-num 1 || <iptables> -I <chain> 1 -t filter -p udp --dport 5060 -m state --state NEW -j NFQUEUE --queue-num 1
+              <iptables> -C <chain> -t filter -p udp -m multiport --dports 5060,5061,5066,5067 -m state --state NEW -j NFQUEUE --queue-num 1 || <iptables> -I <chain> 1 -t filter -p udp -m multiport --dports 5060,5061,5066,5067 -m state --state NEW -j NFQUEUE --queue-num 1
               systemctl start packetbl
 
 
@@ -24,7 +24,7 @@ actionstart = <iptables> -N f2b-<name>
 actionstop = <iptables> -D <chain> -p <protocol> -m multiport --dports <port> -j f2b-<name>
              <iptables> -F f2b-<name>
              <iptables> -X f2b-<name>
-             <iptables> -D <chain> -t filter -p udp --dport 5060 -m state --state NEW -j NFQUEUE --queue-num 1
+             <iptables> -D <chain> -t filter -p udp -m multiport --dports 5060,5061,5066,5067 -m state --state NEW -j NFQUEUE --queue-num 1
              systemctl stop packetbl
 
 # Option:  actioncheck
